welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:14: error: type mismatch;
 found   : Unit
 required: Int
  while(y!=0){
  ^